Adv: PreTestQuestionnaireEnter, PreTestQuestionnaireExit, PostTestQuestionnaireEnter, PostTestQuestionnaireExit events added to ActionsTrackerService. Pre test and post test questionnaires templates updated. Instructions stage removed from flow, now after pre test questionnaires users jump directly to challenges. Fix: Last user conection property from user statistics tab in study display component parsed toLocaleString. Some labels fixed.

--- a/Client/src/app/views/post-test-questionnaire/post-test-questionnaire.component.css
+++ b/Client/src/app/views/post-test-questionnaire/post-test-questionnaire.component.css
@@ -60,3 +60,8 @@
   text-align: center;
   font-weight: 500;
 }
+.instructions{
+  font-weight: 400;
+  text-decoration: underline;
+  margin-bottom: 5%;
+}
